--- a/src/main/java/P5_JS project/WaveFunctionCollapse/index.html
+++ b/src/main/java/P5_JS project/WaveFunctionCollapse/index.html
@@ -14,5 +14,7 @@
 
   <body>
     <script src="sketch.js"></script>
+    <script src="tile.js"></script>
+    <script src="cell.js"></script>
   </body>
 </html>
